samples/_failures_safe/1761170635_352c5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66643ce2.c: In function ‘main’:
./samples/SAFE/__tmp_66643ce2.c:163:12: error: missing terminating " character
  163 |     printf("Graph has %d nodes and %d edges
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_66643ce2.c:163:5: error: expected expression at end of input
  163 |     printf("Graph has %d nodes and %d edges
      |     ^~~~~~
./samples/SAFE/__tmp_66643ce2.c:163:5: error: expected declaration or statement at end of input
